// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code-snippet-title Basic renders as expected 1`] = `
<div
  className="flex-mm flex--space-between-main-mm mb6"
>
  <div
    className="flex-mm"
  >
    <div
      className="txt-bold color-gray-dar mb6"
    >
      MainActivity.java
    </div>
    <div
      className="ml12-mm"
    >
      <a
        className="unprose link"
        href="https://github.com/mapbox/"
        title="View MainActivity.java on GitHub"
      >
        <svg
          aria-hidden="true"
          className="events-none icon inline-block align-t"
          data-testid="icon-github"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-github"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          github
        </span>
         View on GitHub
      </a>
    </div>
  </div>
</div>
`;

exports[`code-snippet-title With a toggle renders as expected 1`] = `
<div
  className="flex-mm flex--space-between-main-mm mb6"
>
  <div
    className="flex-mm"
  >
    <div
      className="txt-bold color-gray-dar mb6"
    >
      ViewController
    </div>
    <div
      className="ml12-mm"
    >
      <a
        className="unprose link"
        href="https://github.com/mapbox/"
        title="View ViewController on GitHub"
      >
        <svg
          aria-hidden="true"
          className="events-none icon inline-block align-t"
          data-testid="icon-github"
          focusable="false"
          style={
            Object {
              "height": 18,
              "width": 18,
            }
          }
        >
          <use
            xlinkHref="#icon-github"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          github
        </span>
         View on GitHub
      </a>
    </div>
  </div>
  <div>
    <div
      className="relative "
    >
      <div
        aria-required={true}
        className="toggle-group round-full bg-blue py3 px3"
        data-testid="some-id-input"
        id="some-id"
        role="radiogroup"
      >
        <label
          className="toggle-container "
        >
          <input
            autoFocus={false}
            checked={true}
            data-testid="some-id-0-input"
            name="some-id"
            onChange={[Function]}
            type="radio"
            value="swift"
          />
          <div
            className="txt-s py3 toggle--white toggle--active-blue toggle"
          >
            Swift
          </div>
        </label>
        <label
          className="toggle-container "
        >
          <input
            autoFocus={false}
            checked={false}
            data-testid="some-id-1-input"
            name="some-id"
            onChange={[Function]}
            type="radio"
            value="objectiveC"
          />
          <div
            className="txt-s py3 toggle--white toggle--active-blue toggle"
          >
            Objective-C
          </div>
        </label>
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</div>
`;
